[package]
name = "muon-solana"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "muon_solana"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.24.2"
spl-math = { version = "0.1.0", features=["no-entrypoint"] }
borsh = { version = "0.9.1", features = ["const-generics"] }
borsh-derive = "0.9.1"
