[package]
name = "muon-solana"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "muon_solana"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]

#solana-program = "=1.7.9"
solana-program = "=1.9.18"
lazy_static = "1.2.0"
anchor-lang = "0.24.2"
primitive-types = "0.11.1"
spl-math = { version = "0.1.0", features=["no-entrypoint"] }
borsh = { version = "0.9.1", features = ["const-generics"] }
getrandom = { version = "0.2.2", features = ["custom"] }
borsh-derive = "0.9.1"
hex-literal = "0.3.4"

sha3 = "0.9.1"
