
[package]
name = "muonv04"
version = "0.0.1"
description = "Muon04 Solana program"
authors = ["Muon Devs <admin@muon.net>"]
repository = "https://github.com/muon-protocol/muon-solana"
license = "Apache-2.0"
homepage = "https://muon.net/"
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
lazy_static = "1.2.0"
primitive-types = "0.10.1"
borsh = "0.9.1"
borsh-derive = "0.9.1"
solana-program = "=1.11.10"
thiserror = "1.0.30"
getrandom = { version = "0.2.2", features = ["custom"] }
ethereum-types = "0.12.1"
serde = "1.0.130"
libsecp256k1 = "0.7.0"
sha3 = "0.9.1"
static-pubkey="1.0.2"
hex-literal = "0.3.4"
bs58 = "0.4.0"

[dev-dependencies]
solana-program-test = "=1.11.10"
solana-sdk = "=1.11.10"

[lib]
name = "muonv04"
crate-type = ["cdylib", "lib"]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
