[package]
name = "muonv04-sample-program"
version = "0.1.0"
edition = "2018"

[features]
no-entrypoint = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
muonv04 = { path = "../muonv04-program", features=["no-entrypoint"] }
thiserror = "1.0.30"
solana-program = "=1.11.10"
primitive-types = "0.10.1"
borsh = "0.9.1"
borsh-derive = "0.9.1"
getrandom = { version = "0.2.2", features = ["custom"] }
sha3 = "0.9.1"
#solana-program-runtime = "1.11.10"
#solana-runtime = "1.11.10"

[lib]
name = "muonv04_sample_program"
crate-type = ["cdylib", "lib"]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
